@@ -1,3 +1,10 @@
+2014-01-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/pluginscheduler.c (enable_plugin_and_dependencies): Add hash table
+	argument to detect circular dependencies in recursive calls.
+	(plugins_scheduler_init): Adjut enable_plugin_and_dependencies call
+	accordingly.
+
 2014-01-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/plugs_req.c, src/plugs_req.h, src/attack.c: Improved
